objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Default Lead Process</fullName>
        <description>Default</description>
        <isActive>true</isActive>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Nurturing</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Qualified and Send Invitation</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Accepts_Reimbursement_for_Referral__c</fullName>
        <label>Accepts Reimbursement for Referral</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Y_N_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Method_Preference__c</fullName>
        <label>Contact Method Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contact_Method_Preference</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Converted_to_HCP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Converted to HCP</label>
        <referenceTo>HCP_Enrollment__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Degree__c</fullName>
        <label>Degree</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Doctorate</fullName>
                </value>
                <value>
                    <fullName>Doctors Of Osteopathy</fullName>
                </value>
                <value>
                    <fullName>Medical Doctors</fullName>
                </value>
                <value>
                    <fullName>Nurse</fullName>
                </value>
                <value>
                    <fullName>Office Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Distance_Type__c</fullName>
        <label>Distance Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Distance_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Distance__c</fullName>
        <label>Distance</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Facility_Classification__c</fullName>
        <label>Facility Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Facility_Classification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Facility_Type_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Only required if “Other” is selected in Facility Type</inlineHelpText>
        <label>Facility Type Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Type__c</fullName>
        <label>Facility Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Facility_Type_c</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HCP_Referral_Source__c</fullName>
        <label>HCP Referral Source</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HCP_Referral_Source_c</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OneKey_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OneKey Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneKey_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>OneKey ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Org_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Org ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Override Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Override Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Override_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Override Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PI_Last_Name__c</fullName>
        <formula>Study_Site__r.Principal_Investigator__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PI Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POC_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Point of Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>POC_First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Point of Contact First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POC_Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Point of Contact Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POC_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Point of Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>POC_Type_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Only required if “Other” is selected in Point of Contact Type</inlineHelpText>
        <label>Point of Contact Type Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POC_Type__c</fullName>
        <label>Point of Contact Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Point_of_Contact_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Patient_Count__c</fullName>
        <label>Patient Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Screened_Count__c</fullName>
        <label>Pre-Screened Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Screened_and_Did_Not_Qualify_Count__c</fullName>
        <label>Pre-Screened and Did Not Qualify Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preferred_Reimbursement_Currency__c</fullName>
        <label>Preferred Reimbursement Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Preferred_Reimbursement_Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Trial_Experience__c</fullName>
        <label>Previous Trial Experience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Y_N_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Project Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Protocol_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Protocol Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Specialty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study_Code_Name__c</fullName>
        <formula>Study_Site__r.Clinical_Trial_Profile__r.Study_Code_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Study Code Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Study_Site__r.Clinical_Trial_Profile__c , Study_Site__r.Clinical_Trial_Profile__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Study Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study_Site_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Study Site Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Study Site</label>
        <referenceTo>Study_Site__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tax ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trials_in_Last_12_Months__c</fullName>
        <label>Trials in Last 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trials_in_Last_36_Months__c</fullName>
        <label>Trials in Last 36 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unqualified_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Is only required if “Other” is selected for Unqualified Reason</inlineHelpText>
        <label>Unqualified Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unqualified_Reason__c</fullName>
        <label>Unqualified Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Already a colleague of the PI</fullName>
                </value>
                <value>
                    <fullName>Unresponsive after 3 attempts</fullName>
                </value>
                <value>
                    <fullName>Will not refer</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>No longer practicing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>LEAD.TITLE</columns>
        <columns>Study_Code_Name__c</columns>
        <columns>PI_Last_Name__c</columns>
        <columns>Study_Site_Number__c</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.LAST_NAME</columns>
        <columns>LEAD.FIRST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.RATING</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>Default_Lead_Queue_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>Default Lead Queue</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GPSS_Lead_Manual_Validation_View</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.FIRST_NAME</columns>
        <columns>LEAD.LAST_NAME</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.FAX</columns>
        <columns>Project_Code__c</columns>
        <columns>Specialty__c</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.STREET</columns>
        <columns>Study_Site_Number__c</columns>
        <columns>LEAD.ZIP</columns>
        <filterScope>Everything</filterScope>
        <label>GPSS Lead Manual Validation View</label>
    </listViews>
    <listViews>
        <fullName>My_Leads</fullName>
        <columns>Study_Code_Name__c</columns>
        <columns>LEAD.TITLE</columns>
        <columns>Protocol_Number__c</columns>
        <columns>Study_Site_Number__c</columns>
        <columns>PI_Last_Name__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Unqualified</value>
        </filters>
        <filters>
            <field>LEAD.CONVERTED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <recordTypes>
        <fullName>Default_Lead_Record_Type</fullName>
        <active>true</active>
        <businessProcess>Default Lead Process</businessProcess>
        <description>Default</description>
        <label>Default Lead Record Type</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>LeadEmailNurturing</fullName>
        <active>true</active>
        <description>Email has to be populated for Leads Before Nurturing status</description>
        <errorConditionFormula>AND(OR(ISPICKVAL(Status,&apos;Nurturing&apos;),IsConverted),  ISBLANK(Email ) &amp;&amp; ISBLANK(Override_Email__c ))</errorConditionFormula>
        <errorMessage>Email has to be populated for Leads Before Nurturing status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LeadStudySiteConvert</fullName>
        <active>true</active>
        <description>Leads Need to Have Study Site Before Conversion</description>
        <errorConditionFormula>AND(IsConverted, ISNULL(Study_Site__c))</errorConditionFormula>
        <errorMessage>Leads Need to Have Study Site Before Conversion</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UnqualifiedReason</fullName>
        <active>true</active>
        <description>Unqualified Reason is required for unqualified leads</description>
        <errorConditionFormula>ISPICKVAL(Status,&apos;Unqualified&apos;) &amp;&amp; (ISPICKVAL( Unqualified_Reason__c,&apos;&apos; )||(ISPICKVAL(Unqualified_Reason__c ,&apos;Other&apos;)&amp;&amp;ISBLANK( Unqualified_Description__c )))</errorConditionFormula>
        <errorDisplayField>Unqualified_Reason__c</errorDisplayField>
        <errorMessage>Reason is required for unqualified leads</errorMessage>
    </validationRules>
</CustomObject>